# PythonNanobindCudaBazel

./: .bazelrc  .clangd  .gdbinit  BUILD.bazel  README.md  WORKSPACE  test.py
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
ext/: BUILD.bazel  ext.bzl  ext.cu.cc
ext/tools/: BUILD.bazel  LICENSE.txt  README.md  build_wheel.py  pyproject.toml
playground/: generate_command.ipynb
playground/build_wheel/: temp_module.ipynb
playground/encode/: encode.ipynb  return_text.py  sample.json  sample.txt
playground/generate_command/: generate_command.ipynb  parse_command.py
playground/generate_depend/: generate_depend.ipynb
playground/import_performance/: perf.ipynb
playground/pattern_match/: notebook.ipynb  test_convert_to_list_paths.py
playground/subprocess/: magic_number.py  reaction_game.py  subprocess.ipynb  timer.py
tools/compile_command_extractor/: gen_command.patch  workspace.bzl
