load("@local_config_cuda//cuda:build_defs.bzl", cuda_default_copts = "cuda_default_copts")
load("@tsl//tsl:tsl.bzl", pybind_extension = "tsl_pybind_extension_opensource")
load("//ext:ext.bzl","if_debug")

config_setting(
    name = "debug",
    values = {
        "compilation_mode": "dbg",
    },
)

pybind_extension(
    name = "ext",
    srcs = ["ext.cu.cc"],
    copts = [
        "-fexceptions",
        "-fno-strict-aliasing",
        # "--cuda_log"
    ] + cuda_default_copts()  
     + if_debug(["-nvcc_options","device-debug"])
     ,
    enable_stub_generation = True,
    features = ["-use_header_modules"],
    module_name = "ext",
    deps = [
        "@nanobind",
        "@local_config_cuda//cuda:cudart",

    ],
    visibility=["//visibility:public"]
)


